# actix-rust

./: Cargo.toml  diesel.toml
migrations/2024-07-31-142035_init_dev_01/: down.sql  up.sql
src/: libs.rs  main.rs  schema.rs
src/models/: account.rs
