[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde_json = "1.0.121"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
diesel = { version = "2.2.0", features = ["mysql" , "chrono", "r2d2"]}
chrono = { version = "0.4", features = ["serde"] }